# genshi

./: .gitignore  LICENSE  README.md  README2.md  pyproject.toml
backend/: db.py  export.py  main.py  models.py  schemas.py  templates_seed.py
backend/enrichment/: fill_blanks.py  llm.py  orchestrator.py  orchestrator_backup.py  query_planner.py  router.py
backend/routes/: export.py  generate.py  health.py  providers.py  sheets.py  templates.py
backend/sources/: header_map.py  intelligence.py  netrows.py
backend/verification/: email_verify.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: NewSheet.tsx  Settings.tsx  SheetList.tsx  SheetView.tsx  Templates.tsx
